--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-﻿torch
+torch
 torchvision
 pillow
 numpy
 opencv-python-headless
 git+https://github.com/jacobgil/pytorch-grad-cam.git
-ultralytics>=8.0.20
-matplotlib>=3.7.0
 pytorch-grad-cam>=1.4.0
+streamlit
+ultralytics
+matplotlib
